// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serverStat custom params передаёт дополнительные параметры 1`] = `
Array [
  Array [
    "path",
    "url",
    Object {
      "additionalParams": undefined,
      "customParams": 123,
      "noBlockDisplay": undefined,
    },
  ],
  Array [
    "path",
    "url",
    Object {
      "additionalParams": Object {
        "a": "b",
      },
      "customParams": Object {
        "a": "b",
      },
      "noBlockDisplay": undefined,
    },
  ],
  Array [
    "path",
    "",
    Object {
      "additionalParams": undefined,
      "customParams": 4,
      "noBlockDisplay": undefined,
    },
  ],
  Array [
    "path",
    "",
    Object {
      "additionalParams": undefined,
      "customParams": 5,
      "noBlockDisplay": undefined,
    },
  ],
]
`;

exports[`serverStat logShow вызывает setCounter 1`] = `
Array [
  Array [
    "path0",
    "",
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": undefined,
    },
  ],
  Array [
    "path1",
    "",
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": undefined,
    },
  ],
]
`;

exports[`serverStat on (other urls) генерирует аттрибуты 1`] = `
Array [
  Array [
    "str0",
    undefined,
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": undefined,
    },
  ],
  Array [
    "str1",
    "",
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": undefined,
    },
  ],
  Array [
    "str2",
    "ya.ru",
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": undefined,
    },
  ],
  Array [
    "str3",
    "ya.ru",
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": undefined,
    },
  ],
]
`;

exports[`serverStat on (other urls) подписывает url 1`] = `
Array [
  Array [
    "str",
    "ya.ru",
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": undefined,
    },
  ],
]
`;

exports[`serverStat on (our urls) генерирует аттрибуты 1`] = `
Array [
  Array [
    "str0",
    undefined,
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": undefined,
    },
  ],
  Array [
    "str1",
    "",
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": undefined,
    },
  ],
  Array [
    "str2",
    "ya.ru",
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": undefined,
    },
  ],
  Array [
    "str3",
    "ya.ru",
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": undefined,
    },
  ],
  Array [
    "str4",
    "ya.ru",
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": 1,
    },
  ],
]
`;

exports[`serverStat on (our urls) не изменяет url 1`] = `
Array [
  Array [
    "str",
    "ya.ru",
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": undefined,
    },
  ],
  Array [
    "str",
    "ya.ru",
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": 1,
    },
  ],
]
`;

exports[`serverStat on (our urls) не пишет показы, если передать параметр в getAttr 1`] = `
Array [
  Array [
    "str0",
    "ya.ru",
    Object {
      "additionalParams": undefined,
      "customParams": undefined,
      "noBlockDisplay": 1,
    },
  ],
]
`;

exports[`serverStat on (our urls) работает с дополнительными параметрами 1`] = `
Array [
  Array [
    "str",
    "ya.ru",
    Object {
      "additionalParams": Object {
        "index": 123,
      },
      "customParams": Object {
        "index": 123,
      },
      "noBlockDisplay": undefined,
    },
  ],
]
`;

exports[`serverStat on (our urls) работает с дополнительными параметрами 2 1`] = `
Array [
  Array [
    "str",
    "ya.ru",
    Object {
      "additionalParams": Object {
        "index": 123,
      },
      "customParams": undefined,
      "noBlockDisplay": undefined,
    },
  ],
]
`;
